git config update from workstation

--- a/.gitconfig
+++ b/.gitconfig
@@ -15,3 +15,6 @@
     lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
     graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' \"$@\" | sed 's/[0-9a-f][0-9a-f]*/\"&\"/g' ; echo '}'; }; f"
     r = remote -v show
+    w = whatchanged
+# from progit.org
+    searchcommits = "!f() { query=\"$1\"; shift; git whatchanged -S\"$query\" \"$@\"; }; f \"$@\""
