New aliases for git

--- a/.gitconfig
+++ b/.gitconfig
@@ -13,8 +13,14 @@
 
 [alias]
     lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+    lgall = log --graph --decorate --pretty=oneline --abbrev-commit --all
     graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' \"$@\" | sed 's/[0-9a-f][0-9a-f]*/\"&\"/g' ; echo '}'; }; f"
     r = remote -v show
     w = whatchanged
 # from progit.org
     searchcommits = "!f() { query=\"$1\"; shift; git whatchanged -S\"$query\" \"$@\"; }; f \"$@\""
+    l = log --stat
+    amend = commit -S --amend
+    cm = commit -S -m
+    commit = commit -S -s
+    log = log --stat
